# ocrisp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: abstractions.rs  cli.rs  gui.rs  lib.rs  main.rs
src/api/: mcp.rs  mod.rs  query_chat.rs  rest.rs
src/db/: data.rs  mod.rs  qdrant.rs
