[package]
name = "ocrisp"
version = "0.1.0"
build = "src/build.rs"
edition = "2024"
authors = ["José Díaz <jose@boquila.org>"]
description = "One-Click RAG Implementation, Simple and Portable"

[dependencies]
egui = "0.32.2"
eframe = { version = "0.32.2", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
clap = { version = "4.5.39", features = ["derive"] }
pdf-extract = "0.9.0"
rmcp = { version = "0.6.0", features = ["server"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.44.2", features = ["full"] }
unicode-segmentation = "1.12.0"
anyhow = "1.0.99"
qdrant-client = "1.15.0"
uuid = {version = "1.18.0", features = ["v7"]}
embed-resource = "3.0"
schemars = "1.0.4"
reqwest = { version = "0.12.23", features = ["json","blocking", "multipart"] }
derive-new = "0.7.0"

[build-dependencies]
embed-resource = "3.0"
